[tool.poetry]
name = "mle-final-project"
version = "0.1.0"
description = ""
authors = ["Paul Cowie <paul.cowie@ntlworld.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
streamlit = "^1.13.0"
jupyter = "^1.0.0"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
xgboost = "^1.6.2"
numpy = "^1.23.4"
imbalanced-learn = "^0.9.1"
tensorflow = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
